# codex-telegram-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  IDENTITY.md  LICENSE  MERGE_PLAN.md  Makefile  README.md  SOUL.md  bot.py  docker-compose.yml  install.sh  prices.json  pyproject.toml  requirements.txt
capabilities/: files.md  git.md  system.md
chrome-extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  SESSION_HANDOFF.md  capabilities_manifest.md  deb_provenance.md  deployment.md  error_catalog.md  headless-social-browser-checklist.md  incident-runtime-contract-2026-02.md  local_api_v1.md  memory_and_proactivity.md  openclaw_parity_matrix.md  parity_exit_criteria.md  parity_matrix_openclaw.md  plugin_lifecycle.md  plugin_manifest.md  recovery_playbook.md  reliability_ops.md  runtime_map.md  security.md  support.md  upgrade_rollback_runbook.md
examples/: mail_smoke.rs
scripts/: bootstrap_github_project.sh  bootstrap_ubuntu.sh  browser_bridge_smoke.py  build_chrome_extension.sh  build_deb.sh  build_macos_app.sh  create_parity_issues.sh  demo_golden_scenarios.sh  install_macos_startup.sh  install_service.sh  run_parity_offline.sh  run_parity_weekly.sh  stop_macos_app.sh  uninstall_macos_startup.sh  validate_plugin_manifest.py
skills/: README.md
src/: lib.rs  main.rs
systemd/: codex-telegram-bot-daemon.service.template  codex-telegram-bot.service.template
tests/: test_agent_core.py  test_agent_module_shims.py  test_agent_service_tool_output.py  test_architecture.py  test_attachments.py  test_browser_bridge.py  test_capabilities.py  test_continuation_guard.py  test_control_center.py  test_control_center_auth.py  test_cost_tracking.py  test_cron_agent.py  test_cron_scheduler.py  test_email_tool.py  test_epic10_ops.py  test_epic3_4_5.py  test_epic6_missions.py  (+44 more)
(+317 files in other folders)
