[package]
name = "agent-hq-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
tauri-plugin-updater = "2.9.1"
url = "2.5.7"

[features]
default = []

[workspace]
